[package]
name = "rustjblas"
version = "0.1.0"
license = "MIT"
description = "Library for using JBLAS DoubleMatrix with off-heap allocation"
authors = ["sadikovi"]
homepage = "https://github.com/sadikovi/rustjblas"
repository = "https://github.com/sadikovi/rustjblas"
keywords = ["jblas", "linalg"]
build = "build.rs"

[lib]
name = "rustjblas"
crate-type = ["lib", "dylib"]

[dependencies]
libc = "0.2"
rand = "0.3"
nalgebra = "0.13"
blas = "0.19"
lapack = "0.15"
openblas-src = "0.5"

[dependencies.nalgebra-lapack]
version = "0.5"
default-features = false
features = ["netlib"]

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
walkdir = "2.0"
