[package]
name = "rustjblas"
version = "0.1.0"
license = "MIT"
description = "Library for using JBLAS DoubleMatrix with off-heap allocation"
authors = ["sadikovi"]
homepage = "https://github.com/sadikovi/rustjblas"
repository = "https://github.com/sadikovi/rustjblas"
keywords = ["jblas", "linalg"]
build = "build.rs"

[lib]
name = "rustjblas"
crate-type = ["lib", "dylib"]

[dependencies]
libc = "0.2"
rand = "0.3"
blas = "0.19"
lapack = "0.15"
netlib-src = "0.7"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
walkdir = "2.0"
